...
        options={{ headerShown: false }}
      />
      <Stack.Screen
        name="Home"
        component={HomeScreen}
        options={{
          headerTitle: "My Tasks",
          gestureEnabled: false,
        }}
      />
    </Stack.Navigator>
  );
}
...
